[project]
name = "pelican-theme-reflex"
version = "3.0.3"
description = "A minimalist Pelican theme, forked from Flex"
authors = [{ name = "Fidel Ramos" }]
license = { text = "MIT" }
readme = "README.md"
keywords = ["pelican", "theme", "static site"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Pelican",
    "Framework :: Pelican :: Themes",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content :: Content Management System",
    "Topic :: Text Processing :: Markup :: HTML",
]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/haplo/pelican-theme-reflex"
Repository = "https://github.com/haplo/pelican-theme-reflex"
Issues = "https://github.com/haplo/pelican-theme-reflex/issues"
Changelog = "https://github.com/haplo/pelican-theme-reflex/blob/main/CHANGELOG.md"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.build]
includes = [
    "pelican/",
    "static/",
    "templates/",
    "translations/",
]
excludes = [
    "**/.DS_Store",
    "**/__pycache__/**",
]

[tool.djlint]
indent = 2
profile = "jinja"
ignore = "H006,H013,H019,H021,H022,H023,H031,T002,T028,T032"
